# terminalplot

./: .coveragerc  .gitignore  .travis.yml  CHANGES.md  README.md  README.rst  next-version.sh  pyproject.toml  setup.py
.github/workflows/: build-test.yml  bump-version.yml  release.yml
terminalplot/: __init__.py  command.py  terminalplot.py
terminalplot/test/: test_terminalplot.py
terminalplot/tests/: test_terminalplot.py
tests/: terminalplot-test.py  test_terminalplot.py
